feat: remove SMS
